test/LitTests/SemanticAnalysis/Exceptions/RethrowInsideScopeFailure.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception ExampleError(int value);

// Entry point.
export int testEntryPoint(unused int argc, unused ubyte ** argv) {
	try {
		throw ExampleError(1024);
	} catch (ExampleError error1) {
		scope (failure) {
			// CHECK: .loci:13:4: error: cannot re-throw caught exception inside scope(failure)
			throw;
		}
		throw;
	}
}

// CHECK: 1 error generated.
